--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
 edition = "2018"
 
 [dependencies]
-domain_patterns = "0.1.5"
-domain_derive = "0.1.5"
+domain_patterns = "0.1.6"
+domain_derive = "0.1.7"
+uuid = "0.7.4"
