--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "survey-creator"
+name = "survey-manager"
 version = "0.1.0"
 authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
 edition = "2018"
@@ -8,3 +8,7 @@ edition = "2018"
 domain_patterns = "0.1.6"
 domain_derive = "0.1.7"
 uuid = "0.7.4"
+serde = "1.0.99"
+serde_derive = "1.0.99"
+serde_json = "1.0.40"
+chrono = "0.4.9"
