--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
 edition = "2018"
 
 [dependencies]
-domain_patterns = "0.1.8"
-domain_derive = "0.1.9"
-uuid = "0.7.4"
+domain_patterns = "0.1.9"
+domain_derive = "0.1.95"
+uuid = { version = "0.7.4", features = ["v4"] }
 serde = "1.0.99"
 serde_derive = "1.0.99"
 serde_json = "1.0.40"
