--- a/survey-manager-core/Cargo.toml
+++ b/survey-manager-core/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
 edition = "2018"
 
 [dependencies]
-domain_patterns = "0.2.1"
+domain_patterns = "0.2.131"
 domain_derive = "0.2.13"
 uuid = { version = "0.7.4", features = ["v4"] }
 serde = "1.0.99"
@@ -13,4 +13,4 @@ serde_derive = "1.0.99"
 serde_json = "1.0.40"
 chrono = "0.4.9"
 jsonwebtoken = "6.0.1"
-failure = "0.1.5"
+snafu = "0.5.0"
