--- a/survey-manager-infra/Cargo.toml
+++ b/survey-manager-infra/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
 edition = "2018"
 
 [dependencies]
-domain_patterns = "0.2.12"
+domain_patterns = "0.2.131"
 survey-manager-core = { path = "../survey-manager-core" }
 mysql = "16.1.0"
 r2d2 = "0.8.5"
 r2d2_mysql = "16.0.0"
-failure = "0.1.5"
+snafu = "0.5.0"
