--- a/survey-manager-infra/Cargo.toml
+++ b/survey-manager-infra/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2018"
 
 [dependencies]
 domain_patterns = "0.2.131"
+domain_derive = "0.2.131"
 survey-manager-core = { path = "../survey-manager-core" }
 mysql = "16.1.0"
 r2d2 = "0.8.5"
 r2d2_mysql = "16.0.0"
 snafu = "0.5.0"
+serde = "1.0.100"
+serde_json = "1.0.40"
