--- a/survey-manager-api/Cargo.toml
+++ b/survey-manager-api/Cargo.toml
@@ -5,13 +5,17 @@ authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
 edition = "2018"
 
 [dependencies]
-domain_patterns = "0.2.134"
+domain_patterns = "0.2.135"
 domain_derive = "0.2.131"
 survey-manager-core = { path = "../survey-manager-core" }
+survey-manager-infra = { path = "../survey-manager-infra" }
 uuid = { version = "0.7.4", features = ["v4"] }
 serde = "1.0.99"
 serde_derive = "1.0.99"
 serde_json = "1.0.40"
 chrono = "0.4.9"
 jsonwebtoken = "6.0.1"
-failure = "0.1.5"
+mysql = "16.1.0"
+actix-web = "1.0.7"
+futures = "0.1.29"
+dotenv = "0.14.1"
