--- a/survey-manager-api/Cargo.toml
+++ b/survey-manager-api/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
 edition = "2018"
 
 [dependencies]
-domain_patterns = "0.2.140"
-domain_derive = "0.2.134"
+domain_patterns = "0.2.141"
+domain_derive = "0.2.135"
 survey-manager-core = { path = "../survey-manager-core" }
 survey-manager-infra = { path = "../survey-manager-infra" }
 uuid = { version = "0.7.4", features = ["v4"] }
@@ -19,3 +19,4 @@ mysql = "16.1.0"
 actix-web = "1.0.7"
 futures = "0.1.29"
 dotenv = "0.14.1"
+derive_more = "0.15.0"
