--- a/survey-manager-api/Cargo.toml
+++ b/survey-manager-api/Cargo.toml
@@ -20,3 +20,9 @@ actix-web = "1.0.7"
 futures = "0.1.29"
 dotenv = "0.14.1"
 derive_more = "0.15.0"
+env_logger = "0.6.2"
+log = "0.4.8"
+r2d2_redis = "0.11.0"
+r2d2 = "0.8.5"
+redis = "0.12.0"
+lazy_static = "1.4.0"
