--- a/survey-manager-infra/Cargo.toml
+++ b/survey-manager-infra/Cargo.toml
@@ -14,6 +14,8 @@ r2d2_mysql = "16.0.0"
 snafu = "0.5.0"
 serde = "1.0.100"
 serde_json = "1.0.40"
+redis = "0.12.0"
+r2d2_redis = "0.11.0"
 
 [dev-dependencies]
 dotenv = "0.14.1"
