--- a/survey-manager-infra/Cargo.toml
+++ b/survey-manager-infra/Cargo.toml
@@ -16,6 +16,7 @@ serde = "1.0.100"
 serde_json = "1.0.40"
 redis = "0.12.0"
 r2d2_redis = "0.11.0"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 dotenv = "0.14.1"
