--- a/survey-manager-api/Cargo.toml
+++ b/survey-manager-api/Cargo.toml
@@ -10,7 +10,7 @@ survey-manager-core = { path = "../survey-manager-core" }
 survey-manager-infra = { path = "../survey-manager-infra" }
 serde = "1.0.99"
 serde_derive = "1.0.99"
-serde_json = "1.0.40"
+serde_json = { version = "1.0.40", features = ["preserve_order"] }
 jsonwebtoken = "6.0.1"
 actix-web = "1.0.7"
 futures = "0.1.29"
